--- a/index.html
+++ b/index.html
@@ -170,10 +170,10 @@
         </div>
         <div class="footer-links">
             <a href="#Home">Home</a>
-            <a href="#education">Education</a>
-            <a href="#skills">Skills</a>
-            <a href="#services">Services</a>
-            <a href="#content">Content</a>
+            <a href="#Education">Education</a>
+            <a href="#Skills">Skills</a>
+            <a href="#Services">Services</a>
+            <a href="#Content">Content</a>
         </div > 
     </div>
     <div class="blur">
