--- a/index.html
+++ b/index.html
@@ -171,9 +171,9 @@
         <div class="footer-links">
             <a href="#Home">Home</a>
             <a href="#Education">Education</a>
-            <a href="#Skills">Skills</a>
+            <a href="#Skill">Skills</a>
             <a href="#Services">Services</a>
-            <a href="#Content">Content</a>
+            <a href="#Contact">Content</a>
         </div > 
     </div>
     <div class="blur">
